<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/ic_bg"
    tools:context=".HomeActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="start"
            android:padding="10dp"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_user"
                android:scaleType="centerInside"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/user_image" />
            
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="20sp"
                tools:text="Hi, Pratham"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/ll_home_1"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginTop="40dp"
        android:background="@color/design_default_color_primary_dark"
        android:orientation="vertical"
        android:gravity="clip_horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_user">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_car"
                android:contentDescription="@string/car_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:textSize="25sp"
                android:text="@string/find_parking_in_just_1_click"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="end">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary_variant"
                android:text="@string/find"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:background="@color/design_default_color_primary_dark"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_home_1">
            
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_ev_station"
                android:contentDescription="@string/ev_station" />
            <LinearLayout
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/find_nearest"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/ev_charging_stations"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary_variant"
                android:text="@string/find"
                />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="0.5dp"
        android:gravity="center"
        android:background="@color/design_default_color_primary_dark"
        android:text="@string/home"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_weight="1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="0.5dp"
        android:gravity="center"
        android:background="@color/design_default_color_primary_dark"
        android:text="@string/contact_us"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_weight="1"
        />

    </LinearLayout>
    
    


</androidx.constraintlayout.widget.ConstraintLayout>